Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3705

LBUG on sanity test65ic with 2 MDS/2MDTs

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.5.0
    • Lustre 2.5.0
    • 3
    • 9554

      It happens when running MDSCOUNT=2 sh sanity.sh

      22:08:50:Lustre: DEBUG MARKER: == sanity test 65ic: new find on -1 default directory striping == 22:08:49 (1375592929)
      22:09:01:LustreError: 11158:0:(mdd_object.c:106:mdd_env_info()) ASSERTION( info != ((void *)0) ) failed:
      22:09:01:LustreError: 11158:0:(mdd_object.c:106:mdd_env_info()) LBUG
      22:09:01:Pid: 11158, comm: mdt_out01_000
      22:09:01:
      22:09:01:Call Trace:
      22:09:01: [<ffffffffa0479895>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
      22:09:01: [<ffffffffa0479e97>] lbug_with_loc+0x47/0xb0 [libcfs]
      22:09:01: [<ffffffffa0c3a41c>] mdd_env_info+0x4c/0x50 [mdd]
      22:09:01: [<ffffffffa0c3af84>] mdd_get_flags+0x24/0x120 [mdd]
      22:09:01: [<ffffffffa0c3b0aa>] mdd_object_start+0x2a/0x80 [mdd]
      22:09:01: [<ffffffffa05efd3a>] lu_object_alloc+0x12a/0x320 [obdclass]
      22:09:01: [<ffffffffa05f0890>] lu_object_find_at+0x210/0x360 [obdclass]
      22:09:01: [<ffffffffa0489fb1>] ? libcfs_debug_msg+0x41/0x50 [libcfs]
      22:09:01: [<ffffffffa05f2eba>] dt_locate_at+0x3a/0x140 [obdclass]
      22:09:01: [<ffffffffa07d83d8>] out_handle+0x588/0xba0 [ptlrpc]
      22:09:01: [<ffffffffa0489fb1>] ? libcfs_debug_msg+0x41/0x50 [libcfs]
      22:09:01: [<ffffffffa07d042d>] tgt_request_handle+0x57d/0xe30 [ptlrpc]
      22:09:01: [<ffffffffa078d068>] ptlrpc_server_handle_request+0x398/0xc60 [ptlrpc]
      22:09:01: [<ffffffffa047a54e>] ? cfs_timer_arm+0xe/0x10 [libcfs]
      22:09:01: [<ffffffffa048ba6f>] ? lc_watchdog_touch+0x6f/0x170 [libcfs]
      22:09:01: [<ffffffffa0784479>] ? ptlrpc_wait_event+0xa9/0x290 [ptlrpc]
      22:09:02: [<ffffffffa0489fb1>] ? libcfs_debug_msg+0x41/0x50 [libcfs]
      22:09:02: [<ffffffff81055ad3>] ? __wake_up+0x53/0x70
      22:09:02: [<ffffffffa078e3ed>] ptlrpc_main+0xabd/0x1700 [ptlrpc]
      22:09:02: [<ffffffffa078d930>] ? ptlrpc_main+0x0/0x1700 [ptlrpc]
      22:09:02: [<ffffffff81096956>] kthread+0x96/0xa0
      22:09:02: [<ffffffff8100c0ca>] child_rip+0xa/0x20
      22:09:02: [<ffffffff810968c0>] ? kthread+0x0/0xa0
      22:09:02: [<ffffffff8100c0c0>] ? child_rip+0x0/0x20
      22:09:02:
      22:09:02:Kernel panic - not syncing: LBUG

            di.wang Di Wang (Inactive)
            di.wang Di Wang (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: