LU-3705 target: refill env before tgt handle request

Since those env of each threads might start before the
stack is initialized, i.e. the ctxt of some modules might not
be initialized yet. So it needs to refill the env before
handling the request to make sure all of ctxts are initialized.

Signed-off-by: wang di <di.wang@intel.com>
Change-Id: Id60432b3d1aa2f23166f0b8a2f4b208361cec80d